<resources>
    <string name="app_name">E-ONE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_api_key">AIzaSyAGm43wa6NsKu9KvoOJPHkYXqimCwGc49E</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_new_cart">Cart</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="my_mobile">Mobile &amp; Tablets</string>
    <string name="computer">Computers &amp; Laptops</string>
    <string name="my_tv">TV , Audio/Vedio , Gaming</string>
    <string name="camera">Camera</string>
    <string name="home">Home Appliances</string>
    <string name="healthy">Healthy &amp; Beauty</string>
    <string name="fashion">Fashion</string>
    <string name="all_Wish_list">View all Wish List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_products">New Products</string>
    <string name="featured_products">Featured Products</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <string name="success">Success</string>
    <string name="help">Help</string>
    <string name="info">Info</string>
    <string name="err">Error</string>
    <string name="ok">OK</string>
    <string name="warning">Warning</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="line"><strike> $100.00 - $106.00 </strike> </string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="preference_file_key" translatable="false">preference_file_key</string>
    <string name="welcome_bac">Welcome Back!</string>
    <string name="log_in">LOG IN</string>
    <string name="labelledEmail">Email address</string>
    <string name="labelledPassword">Password</string>
    <string name="welcome_to_">Welcome to E - One</string>
    <string name="remeber_text">Remeber me</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="not_registe">Not registered yet?</string>
    <string name="not_account">Create an Account</string>
    <string name="login_with">Login with</string>
    <string name="signup_to_y">Signup to your account</string>
    <string name="don_t_have_">Have an account ? Sign in</string>
    <string name="verify_your">Verify your phone number</string>
    <string name="explores_wo">Reset Password</string>
    <string name="please_ente">Please enter the account that you want to reset the password</string>
    <string name="phone_numbe">Phone Number</string>
    <string name="some_id">+88 555-0133</string>
    <string name="we_will_sen">We Will Send verification to your Phone Number</string>
    <string name="phone_verif">Phone Verification</string>
    <string name="enter_your_">Enter your OTP code here</string>
    <string name="didn_t_you_">Didn\'t you received any code?</string>
    <string name="resent_new_">Resent new code</string>
    <string name="new_passwor">New Password</string>
    <string name="new_password_again">New Password Again</string>
    <string name="personal_de">Search Product</string>
    <string name="all">All</string>
    <string name="new_user_fr">New User \nFree gift</string>
    <string name="see_all">See all</string>
    <string name="category">Category</string>
    <string name="some_id_parcentege">-60%</string>
    <string name="dkny_t_shir">DKNY t-shirt - colour  <br /> block front logo</string>
    <string name="bdt_19">BDT 19</string>
    <string name="bdt69">BDT69</string>
    <string name="adjustable_">Adjustable Office Chair</string>
    <string name="hughlan_wor">Hughlan Workspaces</string>
    <string name="some_id_adjustable">4.8</string>
    <string name="flash_sell">Flash Sell</string>
    <string name="some_id_time">08</string>
    <string name="some_id_time_dot">:</string>
    <string name="some_id_time_one">52</string>
    <string name="some_id_time_two">31</string>
    <string name="fs_nike_air">FS - Nike Air Max 270 React...</string>
    <string name="some_id_price">BDT 299,43</string>
    <string name="some_id_old_price">534,33</string>
    <string name="off">24% Off</string>
    <string name="trending">Trending</string>
    <string name="smart_watch">Smart Watch</string>
    <string name="see_collect">See collection</string>
    <string name="workspaces">Workspaces</string>
    <string name="developer">Developer</string>
    <string name="suggested_i">21 suggested \nitems</string>
    <string name="sports">All</string>
    <string name="some_id_cart_price">৳247.97</string>
    <string name="items">3 items</string>
    <string name="brands_to_f">Store To Follow</string>
    <string name="rahul">See all</string>
    <string name="white_full_">E-One Store</string>
    <string name="tradly">Sort by</string>
    <string name="explores_wo_flash">Super Flash Sell</string>
    <string name="title">Super Flash Sale\n50% Off</string>
    <string name="best_match">Best Match</string>
    <string name="time_ending">Time: ending soonest</string>
    <string name="time_newly_">Time: newly listed</string>
    <string name="price_shipp_lowest">Price + Shipping: lowest first</string>
    <string name="price_shipp">Price + Shipping: highest first</string>
    <string name="distance_ne">Distance: nearest first</string>
    <string name="price_range">Price Range</string>
    <string name="min">MIN</string>
    <string name="condition">Condition</string>
    <string name="view_item">View space</string>
    <string name="featured_wo">FEATURED WORKSPACE</string>
    <string name="see_more">See more</string>
    <string name="usb_microph">USB Microphone</string>
    <string name="ghc_549_00">BDT 87.00</string>
    <string name="some_id_rating">4.8</string>
    <string name="md_imtiaj_a">Md Imtiaj Alam</string>
    <string name="add_mobile_">Add Mobile Number Now ></string>
    <string name="some_id_10">10</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="follwed_sto">Follwed Stores</string>
    <string name="recently_vi">Recently View</string>
    <string name="voucher">Voucher</string>
    <string name="my_order">My Order</string>
    <string name="coins">Coins</string>
    <string name="new_user_gift">New User Free Gift</string>
    <string name="my_service">My Service</string>
    <string name="orders">Orders</string>
    <string name="log_out">Log Out</string>
    <string name="apparel">Just for you</string>
    <string name="cosmetics_b">CLOTHES</string>
    <string name="reviews">126 reviews</string>
    <string name="in_stock">In Stock</string>
    <string name="polo_ralph_">Polo Ralph Lauren wind breaker \njacket - classic style - light blue</string>
    <string name="details">Details</string>
    <string name="colours">Colours</string>
    <string name="item_detail">Item Details</string>
    <string name="really_cool">

Really cool and stylish light weight jacket, has 3 inside pockets and feels strong. The fitting is good and not too loose, quite warm but definitely not for winter.
</string>
    <string name="related_pro">Related Products</string>
    <string name="store">Store</string>
    <string name="offer">Offer</string>
    <string name="save">Save</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>

    <string name="your_cupon_">* Your Cupon Is Not Correct</string>

    <string name="items_3_">Items (3)</string>
    <string name="shipping">Shipping</string>
    <string name="this_is_the">This is the final step, after you touching Pay Now button, the payment will be transaction</string>
    <string name="required_fi">*Required fields.</string>
    <string name="some_id_recipents">1</string>
    <string name="recipents_i">Recipents Information</string>
    <string name="packing">Packing</string>
    <string name="product">Product</string>



</resources>