<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_programming"
            android:icon="@drawable/ic_alpha_p_circle_outline"
            android:title="Programming" />
        <item
            android:id="@+id/nav_mobile"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/my_mobile" />
        <item
            android:id="@+id/nav_computer"
            android:icon="@drawable/ic_baseline_computer_24"
            android:title="@string/computer" />

        <item
            android:id="@+id/nav_tv"
            android:icon="@drawable/ic_baseline_live_tv_24"
            android:title="@string/my_tv" />

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_baseline_camera_24"
            android:title="@string/camera" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_pages_24"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_healthy"
            android:icon="@drawable/ic_baseline_health_and_safety_24"
            android:title="@string/healthy" />

        <item
            android:id="@+id/nav_fashion"
            android:icon="@drawable/ic_outline_medical_services_24"
            android:title="@string/fashion" />

        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/all_Wish_list" />
    </group>
</menu>