<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_category"
        android:title="@string/title_category"
        android:icon="@drawable/ic_dashboard_black_24dp"/>

    <item
        android:id="@+id/navigation_new_cart"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="@string/title_new_cart" />


    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat_black_24dp"
        android:title="@string/title_chat" />




    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_24"
        android:title="@string/menu_Profile" />

</menu>
