<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="sortByActivity"
            type="com.kcsl.ecommerce.activities.SortByActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        tools:context=".activities.FlashSellActivity">

        <RelativeLayout
            android:id="@+id/rectangle_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="50dp">
                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/calibri"
                android:textStyle="bold"
                android:text="Sort By"
                android:textAppearance="@style/explores_wo_flash" />


            <ImageView
                android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_outline_notifications_24" />


            <RelativeLayout
                android:id="@+id/searchLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/title"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/search_product_box">

                <ImageView
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/search_vector"/>

                <TextView
                    android:id="@+id/search_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/personal_de"
                    android:textAppearance="@style/personal_de"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_outline_camera_alt_24"/>

            </RelativeLayout>



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/rectangle_3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sort_by_unchecked_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/calibri"
                    android:textStyle="bold"
                    android:text="@string/best_match"
                    android:textAppearance="@style/best_match"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sort_by_checked_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/calibri"
                    android:textStyle="bold"
                    android:text="@string/time_ending"
                    android:textAppearance="@style/time_ending"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sort_by_unchecked_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/calibri"
                    android:textStyle="bold"
                    android:text="@string/time_newly_"
                    android:textAppearance="@style/time_newly_"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sort_by_unchecked_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/calibri"
                    android:textStyle="bold"
                    android:text="@string/price_shipp_lowest"
                    android:textAppearance="@style/price_shipp_lowest"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sort_by_unchecked_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/calibri"
                    android:textStyle="bold"
                    android:text="@string/price_shipp"
                    android:textAppearance="@style/price_shipp"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sort_by_unchecked_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/calibri"
                    android:textStyle="bold"
                    android:text="@string/distance_ne"
                    android:textAppearance="@style/distance_ne"
                    />


            </LinearLayout>

        </LinearLayout>



    </RelativeLayout>
</layout>
